--- a/srcs/ssl/default.conf
+++ b/srcs/ssl/default.conf
@@ -2,7 +2,7 @@ server {
         listen 80;
         listen [::]:80;
         server_name localhost;
-        return 301 https://localhost$request_uri;
+        return 301 https://$host$request_uri;
         }
 
 ###### SSL PART
@@ -13,8 +13,12 @@ server {
         ssl on;
 	server_name localhost;
 
+	#certificates
+	include snippets/self-signed.conf;
+        include snippets/ssl-params.conf;
 	ssl_certificate_key /etc/nginx/ssl/localhost.key; 
 	ssl_certificate /etc/nginx/ssl/localhost.crt;
+	ssl_dhparam /etc/nginx/ssl/dhparam.pem
 
 	root /var/www/html;
 	index index.html index.htm;
@@ -22,10 +26,14 @@ server {
 	location / {
 		autoindex on;
 		try_files $uri $uri/ =404;
- 	}
-
+	
 	location ~ \.php$ {
     	include snippets/fastcgi-php.conf;
     	fastcgi_pass unix:/run/php/php7.3-fpm.sock;
         }
-}
+	
+	location ~ /\.ht { \n\
+          deny all; \n\
+        } \n\
+}	
+
